--- a/anti-termite-reticulation-system.html
+++ b/anti-termite-reticulation-system.html
@@ -94,27 +94,26 @@
                 <li><a href="rodent-control-services.html">Rodent Control Services</a></li>
                 <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                 <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
-                <li><a href="termite-control-services-Hyderabad.html">Termite Control Service</a></li>
+                <li><a href="termite-control-services-hyderabad.html">Termite Control Service</a></li>
                 <li><a href="bird-control.html">Bird Control Service</a></li>
                 <li><a href="disinfection-services.html">Disinfection Service</a></li>
-                <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
+                <li><a href="anti-termite-reticulation-system.html""class=active">Anti Termite Reticulation Service</a></li>
               </ul>
             </li>
             <li class="menu-item-has-children">
               <a href="#">Location Wise Services</a>
               <ul class="sub-menu">
-                  <li><a href="pest-control-chandigarh.html">Chandigarh, Punjab</a></li>
-                <li><a href="pest-control-green-park-Hyderabad.html">Green Park, Hyderabad</a></li>
-                <li><a href="pest-control-in-alaknanda.html">Alaknanda, Hyderabad</a></li>
-                <li><a href="pest-control-in-cr-park.html">Cr Park, Hyderabad</a></li>
-                <li><a href="pest-control-services-panchsheel-park.html">Panchseel Park, Hyderabad</a></li>
-                <li><a href="pest-control-siri-fort-road.html">Siri Fort Road, Hyderabad</a></li>
-                <li><a href="pest-control-anand-lok-Hyderabad.html">Anand Lok, Hyderabad</a></li>
-                <li><a href="pest-control-uday-park-Hyderabad.html">Uday Park, Hyderabad</a></li>
-                <li><a href="pest-control-okhla-industrial-area-phase-1-Hyderabad.html">Okhla Phase 1, Hyderabad</a></li>
-                <li><a href="pest-control-okhla-industrial-area-phase-2-Hyderabad.html">Okhla Phase 2, Hyderabad</a></li>
-                <li><a href="pest-control-okhla-industrial-area-phase-3-Hyderabad.html">Okhla Phase 3, Hyderabad</a></li>
-                <li><a href="https://titanpestcontrol.com/pest-control-aerocity-Hyderabad">Aerocity, Hyderabad</a></li>
+                <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
+                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
+                <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
+                <li><a href="pest-control-kondapur.html">Kondapur</a></li>
+                <li><a href="pest-control-madhapur.html">Madhapur</a></li>
+                <li><a href="pest-control-kukatpally.html">Kukatpally</a></li>
+                <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
+                <li><a href="pest-control-kphb.html">KPHB</a></li>
+                <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
+                <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
               </ul>
             </li>
           </ul>
@@ -163,27 +162,26 @@
                           <li><a href="rodent-control-services.html">Rodent Control Services</a></li>
                           <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                           <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
-                          <li><a href="termite-control-services-Hyderabad.html">Termite Control Service</a></li>
+                          <li><a href="termite-control-services-hyderabad.html">Termite Control Service</a></li>
                           <li><a href="bird-control.html">Bird Control Service</a></li>
                           <li><a href="disinfection-services.html">Disinfection Service</a></li>
-                          <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
+                          <li><a href="anti-termite-reticulation-system.html""class=active">Anti Termite Reticulation Service</a></li>
                         </ul>
                       </li>
                       <li class="menu-item-has-children">
                         <a href="#">Location Wise Services</a>
                         <ul class="sub-menu">
-                             <li><a href="pest-control-chandigarh.html">Chandigarh, Punjab</a></li>
-                          <li><a href="pest-control-green-park-Hyderabad.html">Green Park, Hyderabad</a></li>
-                          <li><a href="pest-control-in-alaknanda.html">Alaknanda, Hyderabad</a></li>
-                          <li><a href="pest-control-in-cr-park.html">Cr Park, Hyderabad</a></li>
-                          <li><a href="pest-control-services-panchsheel-park.html">Panchseel Park, Hyderabad</a></li>
-                          <li><a href="pest-control-siri-fort-road.html">Siri Fort Road, Hyderabad</a></li>
-                          <li><a href="pest-control-anand-lok-Hyderabad.html">Anand Lok, Hyderabad</a></li>
-                          <li><a href="pest-control-uday-park-Hyderabad.html">Uday Park, Hyderabad</a></li>
-                          <li><a href="pest-control-okhla-industrial-area-phase-1-Hyderabad.html">Okhla Phase 1, Hyderabad</a></li>
-                          <li><a href="pest-control-okhla-industrial-area-phase-2-Hyderabad.html">Okhla Phase 2, Hyderabad</a></li>
-                          <li><a href="pest-control-okhla-industrial-area-phase-3-Hyderabad.html">Okhla Phase 3, Hyderabad</a></li>
-                          <li><a href="https://titanpestcontrol.com/pest-control-aerocity-Hyderabad">Aerocity, Hyderabad</a></li>
+                           <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
+                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
+                <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
+                <li><a href="pest-control-kondapur.html">Kondapur</a></li>
+                <li><a href="pest-control-madhapur.html">Madhapur</a></li>
+                <li><a href="pest-control-kukatpally.html">Kukatpally</a></li>
+                <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
+                <li><a href="pest-control-kphb.html">KPHB</a></li>
+                <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
+                <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
                         </ul>
                       </li>
                     </ul>
@@ -340,7 +338,7 @@
           <div class="widget widget_categories">
             <h3 class="widget_title">Related Services</h3>
             <ul>
-              <li><a href="termite-control-services-Hyderabad.html">Termite Control</a><span>(Soil/Wood)</span></li>
+              <li><a href="termite-control-services-hyderabad.html">Termite Control</a><span>(Soil/Wood)</span></li>
               <li><a href="cockroach-control-services.html">Cockroach Management</a><span>(Kitchen-safe)</span></li>
               <li><a href="rodent-control-services.html">Rodent Proofing</a><span>(Humane)</span></li>
               <li><a href="bedbug-control-services.html">Bed Bug Treatment</a><span>(Thorough)</span></li>
@@ -450,7 +448,7 @@
                 <li><a href="rodent-control-services.html">Rodent Control</a></li>
                 <li><a href="mosquito-control-services.html">Mosquito Control</a></li>
                 <li><a href="bedbug-control-services.html">Bed Bug Control</a></li>
-                <li><a href="termite-control-services-Hyderabad.html">Termite Control</a></li>
+                <li><a href="termite-control-services-hyderabad.html">Termite Control</a></li>
                 <li><a href="bird-control.html">Bird Control</a></li>
                 <li><a href="disinfection-services.html">Disinfection Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation</a></li>
@@ -532,5 +530,6 @@
 
 </body>
 </html>
+
 
 
