--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
                 <li><a href="rodent-control-services.html">Rodent Control Services</a></li>
                 <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                 <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
-                <li><a href="termite-control-services-delhi.html">Termite Control Service</a></li>
+                <li><a href="termite-control-services-hyderabad.html">Termite Control Service</a></li>
                 <li><a href="bird-control.html">Bird Control Service</a></li>
                 <li><a href="disinfection-services.html">Disinfection Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
@@ -103,18 +103,17 @@
             <li class="menu-item-has-children">
               <a href="#">Location Wise Services</a>
               <ul class="sub-menu">
-                  <li><a href="pest-control-chandigarh.html">Chandigarh, Punjab</a></li>
-                <li><a href="pest-control-green-park-delhi.html">Green Park, Hyderabad</a></li>
-                <li><a href="pest-control-in-alaknanda.html">Alaknanda, Hyderabad</a></li>
-                <li><a href="pest-control-in-cr-park.html">Cr Park, Hyderabad</a></li>
-                <li><a href="pest-control-services-panchsheel-park.html">Panchseel Park, Hyderabad</a></li>
-                <li><a href="pest-control-siri-fort-road.html">Siri Fort Road, Hyderabad</a></li>
-                <li><a href="pest-control-anand-lok-delhi.html">Anand Lok, Hyderabad</a></li>
-                <li><a href="pest-control-uday-park-delhi.html">Uday Park, Hyderabad</a></li>
-                <li><a href="pest-control-okhla-industrial-area-phase-1-delhi.html">Okhla Phase 1, Hyderabad</a></li>
-                <li><a href="pest-control-okhla-industrial-area-phase-2-delhi.html">Okhla Phase 2, Hyderabad</a></li>
-                <li><a href="pest-control-okhla-industrial-area-phase-3-delhi.html">Okhla Phase 3, Hyderabad</a></li>
-                <li><a href="https://titanpestcontrol.com/pest-control-aerocity-delhi">Aerocity, Hyderabad</a></li>
+                <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
+                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
+                <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
+                <li><a href="pest-control-kondapur.html">Kondapur</a></li>
+                <li><a href="pest-control-madhapur.html">Madhapur</a></li>
+                <li><a href="pest-control-kukatpally.html">Kukatpally</a></li>
+                <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
+                <li><a href="pest-control-kphb.html">KPHB</a></li>
+                <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
+                <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
               </ul>
             </li>
           </ul>
@@ -163,7 +162,7 @@
                           <li><a href="rodent-control-services.html">Rodent Control Services</a></li>
                           <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                           <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
-                          <li><a href="termite-control-services-delhi.html">Termite Control Service</a></li>
+                          <li><a href="termite-control-services-hyderabad.html">Termite Control Service</a></li>
                           <li><a href="bird-control.html">Bird Control Service</a></li>
                           <li><a href="disinfection-services.html">Disinfection Service</a></li>
                           <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
@@ -172,18 +171,17 @@
                       <li class="menu-item-has-children">
                         <a href="#">Location Wise Services</a>
                         <ul class="sub-menu">
-                             <li><a href="pest-control-chandigarh.html">Chandigarh, Punjab</a></li>
-                          <li><a href="pest-control-green-park-delhi.html">Green Park, Hyderabad</a></li>
-                          <li><a href="pest-control-in-alaknanda.html">Alaknanda, Hyderabad</a></li>
-                          <li><a href="pest-control-in-cr-park.html">Cr Park, Hyderabad</a></li>
-                          <li><a href="pest-control-services-panchsheel-park.html">Panchseel Park, Hyderabad</a></li>
-                          <li><a href="pest-control-siri-fort-road.html">Siri Fort Road, Hyderabad</a></li>
-                          <li><a href="pest-control-anand-lok-delhi.html">Anand Lok, Hyderabad</a></li>
-                          <li><a href="pest-control-uday-park-delhi.html">Uday Park, Hyderabad</a></li>
-                          <li><a href="pest-control-okhla-industrial-area-phase-1-delhi.html">Okhla Phase 1, Hyderabad</a></li>
-                          <li><a href="pest-control-okhla-industrial-area-phase-2-delhi.html">Okhla Phase 2, Hyderabad</a></li>
-                          <li><a href="pest-control-okhla-industrial-area-phase-3-delhi.html">Okhla Phase 3, Hyderabad</a></li>
-                          <li><a href="https://titanpestcontrol.com/pest-control-aerocity-delhi">Aerocity, Hyderabad</a></li>
+                          <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
+                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
+                <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
+                <li><a href="pest-control-kondapur.html">Kondapur</a></li>
+                <li><a href="pest-control-madhapur.html">Madhapur</a></li>
+                <li><a href="pest-control-kukatpally.html">Kukatpally</a></li>
+                <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
+                <li><a href="pest-control-kphb.html">KPHB</a></li>
+                <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
+                <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
                         </ul>
                       </li>
                     </ul>
@@ -578,7 +576,7 @@ Feature Area
                 <li><a href="rodent-control-services.html">Rodent Control</a></li>
                 <li><a href="mosquito-control-services.html">Mosquito Control</a></li>
                 <li><a href="bedbug-control-services.html">Bed Bug Control</a></li>
-                <li><a href="termite-control-services-delhi.html">Termite Control</a></li>
+                <li><a href="termite-control-services-hyderabad.html">Termite Control</a></li>
                 <li><a href="bird-control.html">Bird Control</a></li>
                 <li><a href="disinfection-services.html">Disinfection Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation</a></li>
@@ -660,4 +658,5 @@ Feature Area
 
 </body>
 </html>
+
 
