--- a/index.html
+++ b/index.html
@@ -94,25 +94,24 @@
                 <li><a href="rodent-control-services.html">Rodent Control Services</a></li>
                 <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                 <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
-                <li><a href="termite-control-services-delhi.html">Termite Control Service</a></li>
+                <li><a href="termite-control-services-hyderabad.html">Termite Control Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
               </ul>
             </li>
             <li class="menu-item-has-children">
               <a href="#">Location Wise Services</a>
               <ul class="sub-menu">
-                  <li><a href="pest-control-chandigarh.html">Chandigarh, Punjab</a></li>
-                <li><a href="pest-control-green-park-delhi.html">Green Park, Delhi</a></li>
-                <li><a href="pest-control-in-alaknanda.html">Alaknanda, Delhi</a></li>
-                <li><a href="pest-control-in-cr-park.html">Cr Park, Delhi</a></li>
-                <li><a href="pest-control-services-panchsheel-park.html">Panchseel Park, Delhi</a></li>
-                <li><a href="pest-control-siri-fort-road.html">Siri Fort Road, Delhi</a></li>
-                <li><a href="pest-control-anand-lok-delhi.html">Anand Lok, Delhi</a></li>
-                <li><a href="pest-control-uday-park-delhi.html">Uday Park, Delhi</a></li>
-                <li><a href="pest-control-okhla-industrial-area-phase-1-delhi.html">Okhla Phase 1, Delhi</a></li>
-                <li><a href="pest-control-okhla-industrial-area-phase-2-delhi.html">Okhla Phase 2, Delhi</a></li>
-                <li><a href="pest-control-okhla-industrial-area-phase-3-delhi.html">Okhla Phase 3, Delhi</a></li>
-                <li><a href="https://skuaspestcontrol.com/pest-control-aerocity-delhi">Aerocity, Delhi</a></li>
+                <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
+                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
+                <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
+                <li><a href="pest-control-kondapur.html">Kondapur</a></li>
+                <li><a href="pest-control-madhapur.html">Madhapur</a></li>
+                <li><a href="pest-control-kukatpally.html">Kukatpally</a></li>
+                <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
+                <li><a href="pest-control-kphb.html">KPHB</a></li>
+                <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
+                <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
               </ul>
             </li>
           </ul>
@@ -160,7 +159,7 @@
                           <li><a href="rodent-control-services.html">Rodent Control Services</a></li>
                           <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                           <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
-                          <li><a href="termite-control-services-delhi.html">Termite Control Service</a></li>
+                          <li><a href="termite-control-services-hyderabad.html">Termite Control Service</a></li>
                           <li><a href="bird-control.html">Bird Control Service</a></li>
                           <li><a href="disinfection-services.html">Disinfection Service</a></li>
                           <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
@@ -169,18 +168,17 @@
                       <li class="menu-item-has-children">
                         <a href="#">Location Wise Services</a>
                         <ul class="sub-menu">
-                             <li><a href="pest-control-chandigarh.html">Chandigarh, Punjab</a></li>
-                          <li><a href="pest-control-green-park-delhi.html">Green Park, Delhi</a></li>
-                          <li><a href="pest-control-in-alaknanda.html">Alaknanda, Delhi</a></li>
-                          <li><a href="pest-control-in-cr-park.html">Cr Park, Delhi</a></li>
-                          <li><a href="pest-control-services-panchsheel-park.html">Panchseel Park, Delhi</a></li>
-                          <li><a href="pest-control-siri-fort-road.html">Siri Fort Road, Delhi</a></li>
-                          <li><a href="pest-control-anand-lok-delhi.html">Anand Lok, Delhi</a></li>
-                          <li><a href="pest-control-uday-park-delhi.html">Uday Park, Delhi</a></li>
-                          <li><a href="pest-control-okhla-industrial-area-phase-1-delhi.html">Okhla Phase 1, Delhi</a></li>
-                          <li><a href="pest-control-okhla-industrial-area-phase-2-delhi.html">Okhla Phase 2, Delhi</a></li>
-                          <li><a href="pest-control-okhla-industrial-area-phase-3-delhi.html">Okhla Phase 3, Delhi</a></li>
-                          <li><a href="https://skuaspestcontrol.com/pest-control-aerocity-delhi">Aerocity, Delhi</a></li>
+                           <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
+                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
+                <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
+                <li><a href="pest-control-kondapur.html">Kondapur</a></li>
+                <li><a href="pest-control-madhapur.html">Madhapur</a></li>
+                <li><a href="pest-control-kukatpally.html">Kukatpally</a></li>
+                <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
+                <li><a href="pest-control-kphb.html">KPHB</a></li>
+                <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
+                <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
                         </ul>
                       </li>
                     </ul>
@@ -1562,7 +1560,7 @@ Climate change and rapid urbanization are fueling a pest explosion in Indian cit
                 <li><a href="rodent-control-services.html">Rodent Control</a></li>
                 <li><a href="mosquito-control-services.html">Mosquito Control</a></li>
                 <li><a href="bedbug-control-services.html">Bed Bug Control</a></li>
-                <li><a href="termite-control-services-delhi.html">Termite Control</a></li>
+                <li><a href="termite-control-services-hyderabad.html">Termite Control</a></li>
                 <li><a href="bird-control.html">Bird Control</a></li>
                 <li><a href="disinfection-services.html">Disinfection Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation</a></li>
@@ -1644,5 +1642,6 @@ Climate change and rapid urbanization are fueling a pest explosion in Indian cit
 
 </body>
 </html>
+
 
 
