--- a/about.html
+++ b/about.html
@@ -101,17 +101,17 @@
             <li class="menu-item-has-children">
               <a href="#">Location Wise Services</a>
               <ul class="sub-menu">
-                <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
-                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
-                <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
-                <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
-                <li><a href="pest-control-kondapur.html">Kondapur</a></li>
-                <li><a href="pest-control-madhapur.html">Madhapur</a></li>
-                <li><a href="pest-control-kukatpally.html">Kukatpally</a></li>
-                <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
-                <li><a href="pest-control-kphb.html">KPHB</a></li>
-                <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
-                <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
+                <li><a href="pest-control-service-chandanagar.html">Chandanagar</a></li>
+                <li><a href="pest-control-service-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-service-jubilee-hills.html">Jubilee Hills</a></li>
+                <li><a href="pest-control-service-lbnagar.html">LB Nagar</a></li>
+                <li><a href="pest-control-service-kondapur.html">Kondapur</a></li>
+                <li><a href="pest-control-service-madhapur.html">Madhapur</a></li>
+                <li><a href="pest-control-service-kukatpally.html">Kukatpally</a></li>
+                <li><a href="pest-control-service-gachibowli.html">Gachibowli</a></li>
+                <li><a href="pest-control-service-kphb.html">KPHB</a></li>
+                <li><a href="pest-control-service-hitech-city.html">Hi-Tech City</a></li>
+                <li><a href="pest-control-service-jeedimetla.html">Jeedimetla</a></li>
               </ul>
             </li>
           </ul>
@@ -319,7 +319,7 @@ Service Area
                   <img width="42" height="42" src="assets/img/cockroach-control-by-spc-150x150.png" alt="Cockroach Control Icon">
                 </div>
                 <p class="box-subtitle">Pest Control Hyderabad</p>
-                <h3 class="box-title"><a href="https://titanpestcontrol.com/cockroach-control-delhi">Cockroach Control</a></h3>
+                <h3 class="box-title"><a href="https://titanpestcontrol.com/cockroach-control-delhi">Cockroach Control Services</a></h3>
                 <p class="box-text">Effective solutions to keep your home and office in Hyderabad free from cockroaches.</p>
                 <a href="https://titanpestcontrol.com/cockroach-control-delhi" class="th-btn btn-sm">Read More<i class="far fa-arrow-right ms-2"></i></a>
               </div>
@@ -377,31 +377,7 @@ Service Area
               </div>
             </div>
              <!-- Links updated to Hyderabad-specific pages -->
-            <div class="swiper-slide">
-              <div class="service-card">
-                <div class="box-number">06</div>
-                <div class="box-icon">
-                  <img width="42" height="42" src="assets/img/bird-control-by-spc-150x150.png" alt="Bird Control Icon">
-                </div>
-                <p class="box-subtitle">Pest Control Hyderabad</p>
-                <h3 class="box-title"><a href="https://titanpestcontrol.com/bird-control-delhi">Bird Control</a></h3>
-                <p class="box-text">Humane and effective bird control solutions for buildings and balconies in Hyderabad.</p>
-                <a href="https://titanpestcontrol.com/bird-control-delhi" class="th-btn btn-sm">Read More<i class="far fa-arrow-right ms-2"></i></a>
-              </div>
-            </div>
              <!-- Links updated to Hyderabad-specific pages -->
-            <div class="swiper-slide">
-              <div class="service-card">
-                <div class="box-number">07</div>
-                <div class="box-icon">
-                  <img width="42" height="42" src="assets/img/sanitization-by-spc-experts-150x150.png" alt="Disinfection Service Icon">
-                </div>
-                <p class="box-subtitle">Hygiene Service Hyderabad</p>
-                <h3 class="box-title" style="font-size: 23px;"><a href="https://titanpestcontrol.com/disinfection-service-delhi">Disinfection Service</a></h3>
-                <p class="box-text">Professional sanitization to eliminate harmful viruses, bacteria, and germs in Hyderabad.</p>
-                <a href="https://titanpestcontrol.com/disinfection-service-delhi" class="th-btn btn-sm">Read More<i class="far fa-arrow-right ms-2"></i></a>
-              </div>
-            </div>
             <!-- Add Anti Termite Reticulation System -->
              <div class="swiper-slide">
               <div class="service-card">
@@ -652,6 +628,7 @@ Feature Area
 
 </body>
 </html>
+
 
 
 
