--- a/service.html
+++ b/service.html
@@ -84,7 +84,7 @@
         <li><a href="index.htm">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li class="menu-item-has-children">
-          <a href="service.html""class=active">Our Services</a>
+          <a href="service.html" class="active">Our Services</a>
           <ul class="sub-menu">
             <li class="menu-item-has-children">
               <a href="#">Services We Provide</a>
@@ -94,25 +94,23 @@
                 <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                 <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
                 <li><a href="termite-control-services-hyderabad.html">Termite Control Service</a></li>
-                <li><a href="bird-control.html">Bird Control Service</a></li>
-                <li><a href="disinfection-services.html">Disinfection Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
               </ul>
             </li>
             <li class="menu-item-has-children">
               <a href="#">Location Wise Services</a>
               <ul class="sub-menu">
-                <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
-                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
-                <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
-                <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
-                <li><a href="pest-control-kondapur.html">Kondapur</a></li>
-                <li><a href="pest-control-madhapur.html">Madhapur</a></li>
-                <li><a href="pest-control-kukatpally.html">Kukatpally</a></li>
-                <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
-                <li><a href="pest-control-kphb.html">KPHB</a></li>
-                <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
-                <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
+                <li><a href="pest-control-service-chandanagar.html">Chandanagar</a></li>
+                <li><a href="pest-control-service-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-service-jubilee-hills.html">Jubilee Hills</a></li>
+                <li><a href="pest-control-service-lbnagar.html">LB Nagar</a></li>
+                <li><a href="pest-control-service-kondapur.html">Kondapur</a></li>
+                <li><a href="pest-control-service-madhapur.html">Madhapur</a></li>
+                <li><a href="pest-control-service-kukatpally.html">Kukatpally</a></li>
+                <li><a href="pest-control-service-gachibowli.html">Gachibowli</a></li>
+                <li><a href="pest-control-service-kphb.html">KPHB</a></li>
+                <li><a href="pest-control-service-hitech-city.html">Hi-Tech City</a></li>
+                <li><a href="pest-control-service-jeedimetla.html">Jeedimetla</a></li>
               </ul>
             </li>
           </ul>
@@ -162,8 +160,6 @@
                           <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                           <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
                           <li><a href="termite-control-services-hyderabad.html">Termite Control Service</a></li>
-                          <li><a href="bird-control.html">Bird Control Service</a></li>
-                          <li><a href="disinfection-services.html">Disinfection Service</a></li>
                           <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
                         </ul>
                       </li>
@@ -968,3 +964,4 @@ Testimonial Area
 
 
   
+
