--- a/service.html
+++ b/service.html
@@ -236,7 +236,7 @@ Service Area
                         <img width="26" height="26" src="external-icongeek26-outline-colour-icongeek26/64/external-Pest-Control-pest-control-icongeek26-outline-colour-icongeek26.png" alt="Pest Control Icon">
                         Our Services
                     </span>
-                    <h2 class="sec-title">Comprehensive Pest Control Solutions</h2>
+                    <h2 class="sec-title">Comprehensive Pest Control Services</h2>
                     <p class="sec-text">We offer customized pest control treatments to address a variety of pests that invade your personal or professional space.</p>
                 </div>
             </div>
@@ -934,6 +934,7 @@ Testimonial Area
 
 
   
+
 
 
 
