--- a/service.html
+++ b/service.html
@@ -253,7 +253,7 @@ Service Area
                             </div>
                             <p class="box-subtitle">Pest Control</p>
                             <h3 class="box-title"><a href="cockroach-control-services.html">Cockroach Control</a></h3>
-                            <p class="box-text">Effective solutions to keep your home and office free from cockroaches.</p>
+                            <p class="box-text">Effective treatment to eliminate cockroaches and prevent re-infestation using safe and advanced solutions.</p>
                             <a href="cockroach-control-services.html" class="th-btn btn-sm">Read More<i class="far fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
@@ -934,6 +934,7 @@ Testimonial Area
 
 
   
+
 
 
 
