--- a/service.html
+++ b/service.html
@@ -267,7 +267,7 @@ Service Area
                             </div>
                             <p class="box-subtitle">Pest Control</p>
                             <h3 class="box-title"><a href="termite-control-services-Hyderabad.html">Termite Treatment</a></h3>
-                            <p class="box-text">Protect your property from termite damage with our specialized treatments.</p>
+                            <p class="box-text">Powerful termite control treatments to protect your home and property from structural damage.</p>
                             <a href="termite-control-services-Hyderabad.html" class="th-btn btn-sm">Read More<i class="far fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
@@ -281,7 +281,7 @@ Service Area
                             </div>
                             <p class="box-subtitle">Pest Control</p>
                             <h3 class="box-title"><a href="rodent-control-services.html">Rodent Control</a></h3>
-                            <p class="box-text">Keep your environment rodent-free with our effective control measures.</p>
+                            <p class="box-text">Professional rodent control to remove rats and mice and protect your property from damage and health risks.</p>
                             <a href="rodent-control-services.html" class="th-btn btn-sm">Read More<i class="far fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
@@ -309,7 +309,7 @@ Service Area
                             </div>
                             <p class="box-subtitle">Pest Control</p>
                             <h3 class="box-title"><a href="mosquito-control-services.html">Mosquito Control</a></h3>
-                            <p class="box-text">Protect your family from mosquito-borne diseases with our control services.</p>
+                            <p class="box-text">Advanced mosquito control solutions to reduce breeding and protect your family from mosquito-borne diseases.</p>
                             <a href="mosquito-control-services.html" class="th-btn btn-sm">Read More<i class="far fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
@@ -322,8 +322,8 @@ Service Area
                                 <img width="42" height="42" src="ink/48/deadly-spray.png" alt="Reticulation Icon">
                             </div>
                             <p class="box-subtitle">Pest Control</p>
-                            <h3 class="box-title"><a href="anti-termite-reticulation-system.html">Reticulation System</a></h3>
-                            <p class="box-text">Long-lasting anti-termite solution for pre-construction buildings.</p>
+                            <h3 class="box-title"><a href="anti-termite-reticulation-system.html">Anti-Termite Reticulation</a></h3>
+                            <p class="box-text">Long-term anti-termite reticulation system for new constructions and existing buildings.</p>
                             <a href="anti-termite-reticulation-system.html" class="th-btn btn-sm">Read More<i class="far fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
@@ -934,6 +934,7 @@ Testimonial Area
 
 
   
+
 
 
 
