--- a/service.html
+++ b/service.html
@@ -31,7 +31,7 @@
   <!-- Hreflang -->
   
   <!-- Favicons -->
-  <link rel="icon" type="image/png" href="assets/img/favicons/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/webp" href="assets/img/titan-pest-control-logo.webp" sizes="96x96">
   <link rel="icon" type="image/svg+xml" href="assets/img/favicons/favicon.svg">
   <link rel="shortcut icon" href="assets/img/favicons/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
@@ -829,6 +829,7 @@ Gallery Area
 
 
   
+
 
 
 
