--- a/cockroach-control-services.html
+++ b/cockroach-control-services.html
@@ -156,36 +156,28 @@
                           <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                           <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
                           <li><a href="termite-control-services-hyderabad.html">Termite Control Service</a></li>
-                          <li><a href="bird-control.html">Bird Control Service</a></li>
-                          <li><a href="disinfection-services.html">Disinfection Service</a></li>
                           <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
                         </ul>
                       </li>
                       <li class="menu-item-has-children">
                         <a href="#">Location Wise Services</a>
                         <ul class="sub-menu">
-                          <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
-                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
-                <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
-                <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
-                <li><a href="pest-control-kondapur.html">Kondapur</a></li>
-                <li><a href="pest-control-madhapur.html">Madhapur</a></li>
-                <li><a href="pest-control-kukatpally.html">Kukatpally</a></li>
-                <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
-                <li><a href="pest-control-kphb.html">KPHB</a></li>
-                <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
-                <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
+                <li><a href="pest-control-service-chandanagar.html">Chandanagar</a></li>
+                <li><a href="pest-control-service-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-service-jubilee-hills.html">Jubilee Hills</a></li>
+                <li><a href="pest-control-service-lbnagar.html">LB Nagar</a></li>
+                <li><a href="pest-control-service-kondapur.html">Kondapur</a></li>
+                <li><a href="pest-control-service-madhapur.html">Madhapur</a></li>
+                <li><a href="pest-control-service-kukatpally.html">Kukatpally</a></li>
+                <li><a href="pest-control-service-gachibowli.html">Gachibowli</a></li>
+                <li><a href="pest-control-service-kphb.html">KPHB</a></li>
+                <li><a href="pest-control-service-hitech-city.html">Hi-Tech City</a></li>
+                <li><a href="pest-control-service-jeedimetla.html">Jeedimetla</a></li>
                         </ul>
                       </li>
                     </ul>
                   </li>
-                  <li class="menu-item-has-children">
-                    <a href="#">Resources</a>
-                    <ul class="sub-menu">
-                      <li><a href="blog.html">Blog</a></li>
-                      <li><a href="guides/index.htm">Guides</a></li>
-                    </ul>
-                  </li>
+                 <li><a href="blog.html">Blog</a></li>
                   <li><a href="https://Titanpestcontrol.com/job-post">Career</a></li>
                   <li><a href="https://Titanpestcontrol.com/contact">Contact</a></li>
                 </ul>
@@ -353,10 +345,8 @@ Service Area
             <ul>
               <li><a href="termite-control-services-hyderabad.html">Termite Control</a></li>
               <li><a href="bedbug-control-services.html">Bed Bug Control</a></li>
-              <li><a href="bird-control.html">Bird Control</a></li>
               <li><a href="rodent-control-services.html">Rodent Removal</a></li>
               <li><a href="mosquito-control-services.html">Mosquito Prevention</a></li>
-              <li><a href="disinfection-services.html">Disinfection Treatment</a></li>
               <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation</a></li>
             </ul>
           </div>
@@ -471,8 +461,6 @@ Service Area
                 <li><a href="mosquito-control-services.html">Mosquito Control</a></li>
                 <li><a href="bedbug-control-services.html">Bed Bug Control</a></li>
                 <li><a href="termite-control-services-hyderabad.html">Termite Control</a></li>
-                <li><a href="bird-control.html">Bird Control</a></li>
-                <li><a href="disinfection-services.html">Disinfection Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation</a></li>
               </ul>
             </div>
@@ -552,6 +540,7 @@ Service Area
 
 </body>
 </html>
+
 
 
 
