--- a/cockroach-control-services.html
+++ b/cockroach-control-services.html
@@ -257,7 +257,12 @@ Service Area
             </ul>
 
             <h2 id="why" class="h3 sec-title page-title mt-4">Why professional cockroach control matters</h2>
-            <p>Cockroaches contaminate food, spread bacteria, and trigger allergies. Hyderabad’s density, warmth and moisture allow German and American roaches to multiply quickly. Our targeted program removes visible roaches, hits hidden colonies, and helps stop re-infestation.</p>
+            <p>Cockroaches contaminate food, spread harmful bacteria, and can trigger allergies and asthma. 
+              Hyderabad’s warm climate, high humidity, and densely populated areas create ideal conditions for
+              German and American cockroaches to multiply rapidly. At Titan Pest Control, our targeted cockroach control 
+              program eliminates visible cockroaches, destroys hidden nests and breeding areas,
+              and helps prevent future infestations—keeping your home or business clean, safe, and hygienic.
+            </p>
 
             <h3 id="signs" class="mt-40 mb-3">Common signs of a roach infestation</h3>
             <ul>
@@ -540,6 +545,7 @@ Service Area
 
 </body>
 </html>
+
 
 
 
