--- a/cockroach-control-services.html
+++ b/cockroach-control-services.html
@@ -250,9 +250,7 @@ Service Area
               <li><a href="#why">Why control roaches?</a></li>
               <li><a href="#signs">Signs of infestation</a></li>
               <li><a href="#process">Our 7-step process</a></li>
-              <li><a href="#pricing">Pricing & packages</a></li>
               <li><a href="#prep">Prep & aftercare</a></li>
-              <li><a href="#areas">Areas we serve</a></li>
               <li><a href="#faqs">FAQs</a></li>
             </ul>
 
@@ -266,11 +264,11 @@ Service Area
 
             <h3 id="signs" class="mt-40 mb-3">Common signs of a roach infestation</h3>
             <ul>
-              <li>Musty odor around kitchens or store rooms</li>
-              <li>Droppings like black pepper in cabinets or under sinks</li>
-              <li>Egg cases (oothecae) near appliances and hinges</li>
-              <li>Fast night activity when lights switch on</li>
-              <li>Smear marks near drains or damp areas</li>
+              <li>Persistent musty or oily odor around kitchens and storage areas</li>
+              <li>Small black droppings resembling ground pepper inside cabinets or beneath sinks</li>
+              <li>Cockroach egg cases (oothecae) found near appliances, hinges, or hidden corners</li>
+              <li>Increased cockroach activity at night, especially when lights are suddenly switched on</li>
+              <li>Dark smear marks along walls, near drains, and in damp or humid areas</li>
             </ul>
 
             <h3 id="process" class="mt-40 mb-3">Our proven 7-step process</h3>
@@ -284,13 +282,6 @@ Service Area
               <li>Follow-up & re-inspection</li>
             </ol>
 
-            <h3 id="pricing" class="mt-40 mb-3">Pricing & packages</h3>
-            <ul>
-              <li>Single Service: from ₹999 (1BHK baseline)</li>
-              <li>AMC (Quarterly): 3–4 visits, long-term prevention</li>
-              <li>Commercial Kitchens: custom compliance programs</li>
-            </ul>
-
             <div class="mt-3 d-flex flex-wrap gap-2">
               <a class="th-btn rounded-12 style3" href="/contact">Book Free Inspection <i class="fas fa-arrow-right ms-2"></i></a>
               <a class="th-btn rounded-12" href="tel:+919666665400">Call +91 9666665400 <i class="fas fa-phone ms-2"></i></a>
@@ -303,33 +294,38 @@ Service Area
               <li>Avoid washing baited crevices for 5–7 days</li>
             </ul>
 
-            <h3 id="areas" class="mt-40 mb-3">Areas we serve – Hyderabad</h3>
-            <p>South (GK, CR Park, Hauz Khas, Saket), West (Dwarka, Janakpuri), East (Mayur Vihar, Laxmi Nagar), North (Rohini, Pitampura), Central (CP, Karol Bagh), plus Gurugram, Noida, Faridabad & Ghaziabad.</p>
-
             <h3 id="faqs" class="mt-40 mb-4">Frequently Asked Questions</h3>
             <div class="accordion" id="faqAccordion">
               <div class="accordion-card">
                 <div class="accordion-header" id="q1">
-                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#c1" aria-expanded="true">How long does the treatment last?</button>
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#c1" aria-expanded="true">How long does cockroach control treatment take to work?</button>
                 </div>
                 <div id="c1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
-                  <div class="accordion-body">2–3 months typically. AMC recommended for prevention.</div>
+                  <div class="accordion-body">Most cockroach treatments start showing results within 24–48 hours.
+                    Complete control may take a few days as the treatment reaches hidden nests and breeding areas.
+                    Titan Pest Control uses advanced methods to ensure long-lasting protection.
+                  </div>
                 </div>
               </div>
               <div class="accordion-card">
                 <div class="accordion-header" id="q2">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c2">Is it safe for kids and pets?</button>
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c2">Is the cockroach control treatment safe for children and pets?</button>
                 </div>
                 <div id="c2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                  <div class="accordion-body">Yes, low-toxicity products used carefully. Safe after drying.</div>
+                  <div class="accordion-body">Yes. We use government-approved, eco-friendly chemicals 
+                    that are safe for children and pets when applied by our trained technicians.
+                    Basic precautions, such as avoiding treated areas for a few hours, may be advised.
+                  </div>
                 </div>
               </div>
               <div class="accordion-card">
                 <div class="accordion-header" id="q3">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c3">Why choose an AMC?</button>
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c3">How can I prevent cockroaches from coming back after treatment?</button>
                 </div>
                 <div id="c3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                  <div class="accordion-body">Quarterly visits break breeding cycles & keep audits compliant.</div>
+                  <div class="accordion-body">Maintaining cleanliness, sealing cracks, fixing water leaks, and proper food storage help prevent re-infestation.
+                    Our cockroach control service also includes preventive measures to reduce future pest problems.
+                  </div>
                 </div>
               </div>
             </div>
@@ -545,6 +541,7 @@ Service Area
 
 </body>
 </html>
+
 
 
 
